增加读和写两种处理