@@ -16,6 +16,13 @@
                 <configuration>
                     <source>11</source>
                     <target>11</target>
+                    <compilerArgs>
+                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                    </compilerArgs>
                     <!--Disable annotation processing for ourselves-->
                     <!--<compilerArgument>-proc:none</compilerArgument>-->
                 </configuration>
@@ -26,7 +33,7 @@
                             <compilerArgument>-proc:none</compilerArgument>
 <!--                            <includes>-->
 <!--                                &lt;!&ndash; 自定义的注解处理器全限定名&ndash;&gt;-->
-<!--                                <include>noogel.xyz.ObserveProcessor</include>-->
+<!--                                <include>noogel.xyz.getter.GetterProcessor</include>-->
 <!--                            </includes>-->
                             <source>11</source>
                             <target>11</target>
